[tool.poetry]
name = "loraimpl"
version = "0.1.0"
description = ""
authors = ["Maximilian Süss <maximilian.emanuel.suess@gmail.com>"]
readme = "README.md"
# package-mode = false

[tool.poetry.dependencies]
python = "^3.11.10"
torch = "^2.5.1"
datasets = "^3.2.0"
transformers = "^4.47.1"
scikit-learn = "^1.6.0"
tqdm = "^4.67.1"
evaluate = "^0.4.3"
rouge-score = "^0.1.2"
wandb = "^0.19.1"
torchinfo = "^1.8.0"
pycocoevalcap = "^1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

